src/compiler/snapshots/alma__compiler__tests__compile-2.snap
---
source: src/compiler/mod.rs
expression: "compile(&[r\"\nmodule CycleModule\n\nimport CycleModule.Test\n\n\nmodule CycleModule.Test\n    import CycleModule\n        \"])"

---
Cycle detected between modules:

    CycleModule
        ↓
    CycleModule.Test
        ↓
    CycleModule

Alma's module system does not support cyclic dependencies.
