src/compiler/snapshots/alma__compiler__tests__compile-4.snap
---
source: src/compiler/mod.rs
expression: "compile(&[r\"\nmodule ModuleWithTypeOnlyDefinitions exposing (main)\n\ntest : Float -> Float -> Float\n\nmain a = test a 5\n        \"])"

---
/*

module ModuleWithTypeOnlyDefinitions

main : ∀ ∅ . Float -> Float

*/


globalThis.Alma = Object.assign(globalThis.Alma ?? {}, function () {


let ModuleWithTypeOnlyDefinitions = function () {


    function main(a) {
        return test(a, 5)
    }

    return {
        main,
    };

}();

return {
    ModuleWithTypeOnlyDefinitions,
};

}());

